source: cleanup nonnull warnings